Add alert filtering, ranking, sorting & use-case
Introduce a complete alerts pipeline: new AlertQuery, AlertFilter, AlertSorter, AlertClassifier, AlertRankingPolicy and DefaultAlertRankingPolicy to filter, rank and order GTFS-RT alerts for the UI. Add AlertsUseCase to read cached alerts, filter by context, sort and limit results. Update AlertsService to store an AlertsSnapshot (alerts + fetchedAtEpochSec), return a snapshot, and use immutable copies on refresh. Enhance model classes: AlertInfo now defensively copies lists, documents nullable epoch-second start/end and provides isActiveAt/isActiveNow helpers; InformedEntityInfo gains an optional directionId, blank-to-null normalization, additional constructor and toString. Add unit tests for sorter and default ranking policy and adjust test package layout. app.db (binary) was also updated.